--- a/app/src/main/res/layout/activity_lista_contatos.xml
+++ b/app/src/main/res/layout/activity_lista_contatos.xml
@@ -4,17 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.example.mariana.agenda.ListaContatosActivity">
+    tools:context="com.edu.rafaelsaito.debu.ListaContatosActivity">
 
     <ListView
         android:id="@+id/lista_contatos"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    </ListView>
+        android:layout_height="match_parent"/>
 
     <Button
+        android:id="@+id/botao_novo_contato"
         android:layout_width="56dp"
         android:layout_height="56dp"
         android:text="+"
@@ -27,6 +25,5 @@
         android:layout_marginRight="16dp"
         android:background="@drawable/havelock_pink_oval_button"
         android:stateListAnimator="@null" />
-
 
 </RelativeLayout>
